Added Readme file, plotting codes and results

--- a/GPT-4.1.ipynb
+++ b/GPT-4.1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,12 +42,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Generating: test_images/01_Apple.png / prompt: A soft red tomato with seeds, in flat cartoon vector style, no background\n",
+      "Saved: outputs/gpt_4_1_prompt/01_Apple_gen.png\n",
+      "Generating: test_images/S_02_Apricot.png / prompt: Draw a shiny red apple with a vibrant green leaf in the same digital illustration style as 'S_02_Apricot.png'. The apple should be centered, well-lit, and have soft shadows like the apricot image.\n",
+      "Saved: outputs/gpt_4_1_prompt/S_02_Apricot_gen.png\n",
       "Generating: test_images/S_03_Avocado_1.png / prompt: Draw a yellow lemon and a sliced lemon in the same illustration style as the uploaded image (S_03_Avocado_1.png). Match the lighting, colors, and vector look.\n",
       "Saved: outputs/gpt_4_1_prompt/S_03_Avocado_1_gen.png\n",
       "Generating: test_images/04_Banana.png / prompt: Draw an apricot with a glossy surface in the same cartoon vector style as the image I uploaded.\n",
       "Saved: outputs/gpt_4_1_prompt/04_Banana_gen.png\n",
       "Generating: test_images/05_Black_currant.png / prompt: Using the same style as the provided cluster of black currants, draw a single, big, round, one black currant.\n",
       "Saved: outputs/gpt_4_1_prompt/05_Black_currant_gen.png\n",
+      "Generating: test_images/15_Grapes.png / prompt: Draw a cluster of glossy black currants in the same cartoon vector style as the grapes image I uploaded.\n",
+      "Saved: outputs/gpt_4_1_prompt/15_Grapes_gen.png\n",
+      "Generating: test_images/30_Salmon.png / prompt: Draw a sliced salmon fillet in the exact same illustration style as the whole salmon image I uploaded. Match the cartoon vector look, colors, and outlines.\n",
+      "Saved: outputs/gpt_4_1_prompt/30_Salmon_gen.png\n",
+      "Generating: test_images/35_Catfish.png / prompt: Draw a salmon in the same drawing style as the catfish image I uploaded (35_Catfish.png). Ensure the illustration matches the style exactly in colors, shading, and vector lines.\n",
+      "Saved: outputs/gpt_4_1_prompt/35_Catfish_gen.png\n",
+      "Generating: test_images/S_30_Orange_1.png / prompt: Using the same illustration style as the orange slice image I uploaded (S_30_Orange_1.png), draw a vibrant green sliced avocado with a smooth surface. Match the exact visual style.\n",
+      "Saved: outputs/gpt_4_1_prompt/S_30_Orange_1_gen.png\n",
+      "Generating: test_images/S_05_Black currant_3.png / prompt: This is a  black currant . Draw me a green pear. Use the same image drawing style in the image.\n",
+      "Saved: outputs/gpt_4_1_prompt/S_05_Black currant_3_gen.png\n",
+      "Generating: test_images/S_11_Cranbverry_1.png / prompt: This is a  cranberry . Draw me a green pear. Use the same image drawing style in the image.\n",
+      "Saved: outputs/gpt_4_1_prompt/S_11_Cranbverry_1_gen.png\n",
       "\n",
       "Completed.\n"
      ]
@@ -65,7 +81,7 @@
     "    prompt_items = json.load(f)\n",
     "\n",
     "# Took 2 - 5 samples, the hardest ones\n",
-    "prompt_items = prompt_items[2:5]\n",
+    "# prompt_items = prompt_items[2:5]\n",
     "\n",
     "os.makedirs(\"outputs/gpt_4_1_prompt\", exist_ok=True)\n",
     "\n",
@@ -97,7 +113,7 @@
     "            tools=[{\"type\": \"image_generation\"}],\n",
     "        )\n",
     "\n",
-    "        # Gelen outputlardan image_generation_call tipindekini al\n",
+    "        \n",
     "        outputs = [\n",
     "            output.result\n",
     "            for output in response.output\n",
@@ -114,7 +130,7 @@
     "        results.append({\n",
     "            \"original_image\": image_path,\n",
     "            \"user_prompt\": user_prompt,\n",
-    "            \"generated_image\": output_path\n",
+    "            \"generated_image_path\": output_path\n",
     "        })\n",
     "\n",
     "    except Exception as e:\n",
@@ -126,6 +142,13 @@
     "\n",
     "print(\"\\nCompleted.\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
